# parseridge

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  mkdocs.yml  pyproject.toml  setup.py
docs/: index.md  install.md
docs/modules/: callbacks.md  data_preparation.md  training.md
experiments/: languages_attention_english_ewt.yml  languages_attention_german_gsd.yml  languages_attention_japanese_gsd.yml  languages_attention_scaled_english_ewt.yml  languages_attention_scaled_german_gsd.yml  languages_attention_scaled_japanese_gsd.yml  languages_attention_scaled_spanish_ancora.yml  languages_attention_spanish_ancora.yml  languages_baseline_english_ewt.yml  languages_basline_english_ewt.yml  languages_static_english_ewt.yml  languages_static_german_gsd.yml  languages_static_japanese_gsd.yml  languages_static_spanish_ancora.yml
experiments/attention/: 000_universial_attention_local.yml  001_universal_attention_only.yml  002_universal_attention_only.yml  003_universal_attention_only.yml  004_universal_attention_only.yml  005_universal_attention_only.yml  006_universal_attention_only.yml  007_universal_attention_only.yml  008_universal_attention_only.yml  009_universal_attention_only.yml  010_universal_attention_only.yml  011_universal_attention_only.yml  012_universal_attention_only.yml  013_universal_attention_only.yml  014_universal_attention_only.yml  015_universal_attention_only.yml  016_universal_attention_only.yml  (+461 more)
mkdocs/: mkdocs.yml
parseridge/: __init__.py  debug.py  main.py  run_experiment.py  train.py
test_parseridge/: pytest.ini  utils.py
(+194 files in other folders)
