[tool.poetry]
name = "parseridge"
version = "0.1.0"
description = "A transition-based dependency parser backed by attention mechanisms."
authors = ["Johannes Gontrum <j@gontrum.me>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.32"
torch = "^1.1"
torchvision = "^0.3.0"
conllu = "^1.3"
pygsheets = "^2.0"
pyyaml = "^5.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4"
jupyter = "^1.0"
seaborn = "^0.9.0"
matplotlib = "^3.1"
isort = "^4.3"
pandas = "^0.24.2"
black = {version = "^18.3-alpha.4",allows-prereleases = true}
pre-commit = "^1.17"
flake8 = "^3.7"
mkdocs = "^1.0.4"
mkdocs-material = "^4.4.3"
pygments = "^2.4.2"

[tool.black]
line-length = 92
target_version = ["py37"]
exclude = "\\.git"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
